--- a/2024/2024-04-14.md
+++ b/2024/2024-04-14.md
@@ -1,14 +1,14 @@
-# Some unexpected common ground between Dimon and bitcoiners
-## tktktktk
+# Some unexpected common ground
+## Inadvertently, Jamie Dimon echoes bitcoiners on inflation
 
-![](https://upload.wikimedia.org/wikipedia/commons/3/3f/Jamie_Dimon%2C_CEO_of_JPMorgan_Chase.jpg)
-*File photo of JPMorgan CEO Jamie Dimon. Photo by Steve Jurvetson via Wikimedia Commons*
+![JPMorgan Chase CEO Jamie Dimon](https://upload.wikimedia.org/wikipedia/commons/3/3f/Jamie_Dimon%2C_CEO_of_JPMorgan_Chase.jpg)
+*File photo of JPMorgan Chase CEO Jamie Dimon. Photo by Steve Jurvetson via Wikimedia Commons*
 
-**JPMorgan CEO Jamie Dimon** surprised many colleagues and investors last week by fretting about [a possible resurgence of inflation](https://www.wsj.com/finance/jamie-dimon-warns-u-s-might-face-interest-rate-spike-83789da7?st=ez2fgov0m0m4wye&reflink=desktopwebshare_permalink) and official interest rates in the U.S.
+**JPMorgan Chase CEO Jamie Dimon** surprised many colleagues and investors last week by fretting about [a possible resurgence of inflation](https://www.wsj.com/finance/jamie-dimon-warns-u-s-might-face-interest-rate-spike-83789da7?st=ez2fgov0m0m4wye&reflink=desktopwebshare_permalink) and official interest rates in the U.S.
 
 Coming into 2024, we were supposed to be past such worries. Everyone in the financial industry was eagerly anticipating rate cuts, not hikes, from the Federal Reserve. But that all might have been premature, according to Wall Street's biggest fish.
 
-In his [annual letter](https://reports.jpmorganchase.com/investor-relations/2023/ar-ceo-letters.htm) to JPMorgan shareholders, Dimon writes:
+In his [annual letter](https://reports.jpmorganchase.com/investor-relations/2023/ar-ceo-letters.htm) to JPMorgan Chase shareholders, Dimon writes:
 
 *There is too much emphasis on short-term, monthly data and too little on long-term trends and on what might happen in the future that would influence long-term outcomes. For example, today there is tremendous interest in monthly inflation data, although it seems to me that every long-term trend I see increases inflation relative to the last 20 years. Huge fiscal spending, the trillions needed each year for the green economy, the remilitarization of the world and the restructuring of global trade — all are inflationary. I’m not sure models could pick this up. And you must use judgment if you want to evaluate impacts like these.*
 
@@ -16,7 +16,11 @@ Funny thing is, this macroeconomic diagnosis is pretty much the same one you wou
 
 Just to cite some examples from one widely followed bitcoin news source: You can hear concerns similar to Dimon's about mounting U.S. spending, debt, and inflation from guests on Peter McCormack's podcast [here](https://www.whatbitcoindid.com/podcast/repricing-the-world-in-bitcoin), [here](https://www.whatbitcoindid.com/podcast/2024-the-year-of-the-bitcoin-bull), [here](https://www.whatbitcoindid.com/podcast/the-debt-tsunami), and [here](https://www.whatbitcoindid.com/podcast/macro-fed-pivot-bitcoin), all at least two months before Dimon published his letter.
 
-Of course, he would still disagree vehemently with such folks about what investors should *do* about inflation risk, particularly whether buying bitcoin is the answer. But perhaps he (and the rest of us) should at least be a little more reticent to paint them as crackpots.
+In general, there are no stauncher inflation hawks in any corner of the financial world than bitcoiners. Their argument tends to hold that governments will always end up devaluing conventional money by printing too much of it to fund various misadventures. Hence the solution for the rest of us should be to hold digital money that's issued on a steady, automated basis, with a long-term cap on supply.
+
+Dimon would of course disagree with that solution, even if he's now describing the underlying problem in similar terms. To him, the proper solution should be to give your money to his bank, because it's run by sharp folks like himself who will always know exactly what to do, just in time, to stay ahead of any new wave of inflation.
+
+What could possibly go wrong?
 
 ### Week in Review: April 7-13, 2024
 
