Adding art, fleshing out copy

--- a/2024/2024-04-21.md
+++ b/2024/2024-04-21.md
@@ -1,34 +1,43 @@
-# tktktktktk
-## tktktktk
+# Two ways to *not* print money
+## Bitcoin and USD both ended up with restrictive monetary policies last week -- each in its distinctive way.
 
-![]()
-*Photo by tk via tk*
+![Fed Chair Jerome Powell](https://upload.wikimedia.org/wikipedia/commons/1/17/DSC4210_%2853073540164%29.jpg)
+*For bitcoin, there is no equivalent of Jerome Powell. Photo courtesy of the Federal Reserve via Wikimedia Commons*
 
-<!-- Lede item. Should run ~450 words.
+<!--
 
-Some (mostly) evergreen possibilities below. Remember to clean up WIPlist in Notion, store ideas here for the newsletter as you go...
+Lede item. Should run ~450 words. Juxtapose Fed flip-flopping and the halving. A contrast in monetary policies.
 
-- HALVING: It's imminent. Do a preview.
+https://www.cnn.com/2024/04/16/business/chair-powell-discussion/index.html
 
-- AISIGNIN: One of the most boring aspects of this new technology is really one of the most important.
-
-- HOMEBIAS: Does it exist in tech, as in the stock market?
+https://www.reuters.com/markets/us/feds-powell-jefferson-square-restrictive-policy-with-strong-data-2024-04-16/
 
 -->
 
 ### Week in Review: April 14-20, 2024
 
-<!-- Prompt: Leo, please summarize the news article in this browser tab. I'm looking for a paragraph of 2-3 conversational sentences, suitable to use in a newsletter I'm working on. -->
+- BTC update: Halving, market action, etc. <!-- Need links --> Dominance hit 55%, highest level since 2021, according to Bloomberg. <!-- Find link -->
 
-- tk
-- tk
-- tk
+- https://www.citationneeded.news/ai-isnt-useless/
+
+- https://www.coindesk.com/policy/2024/04/19/indian-man-pleads-guilty-to-creating-spoofed-coinbase-website-stealing-95m-in-crypto/
+
+- Big Tech updates: Meta AI announcement | Google fired employees for Gaza protests. | Magnificent Seven all report quarterly earnings next week. https://seekingalpha.com/article/4684338-magnificent-7-earnings-preview-sa-quant | Apple ordered to remove WhatsApp from Chinese App Store. https://www.nytimes.com/2024/04/18/technology/apple-whatsapp-china-app-store.html
+
+- https://www.wired.com/story/the-us-copyright-office-loosens-up-a-little-on-ai/
+
 
 ### Odds & Ends
 
-- tk
-- tk
-- tk
+- New news site from Robin Hood: https://sherwood.news/
+
+- https://www.nytimes.com/2024/04/15/climate/coral-reefs-bleaching.html
+
+- https://www.coindesk.com/consensus-magazine/2024/04/16/what-the-history-of-linux-says-about-the-long-road-to-decentralized-storage-adoption/
+
+- https://twitter.com/BitcoinNewsCom/status/1780421942425575597
+
+- https://www.reuters.com/world/americas/police-arrest-six-seek-three-others-linked-canadas-largest-gold-heist-2024-04-17/
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please join our email list.**_
 
