fixing broken photo link

--- a/2024/2024-04-21.md
+++ b/2024/2024-04-21.md
@@ -1,7 +1,7 @@
 # Two ways to *not* print money
 ## Bitcoin and USD both ended up with restrictive monetary policies last week -- each in its distinctive way.
 
-![Fed Chair Jerome Powell](https://upload.wikimedia.org/wikipedia/commons/1/17/DSC4210_%2853073540164%29.jpg)
+![Fed Chair Jerome Powell](//upload.wikimedia.org/wikipedia/commons/thumb/1/17/DSC4210_%2853073540164%29.jpg/1024px-DSC4210_%2853073540164%29.jpg)
 *For bitcoin, there is no equivalent of Jerome Powell. Photo courtesy of the Federal Reserve via Wikimedia Commons*
 
 <!--
