Edits to summary items

--- a/2024/2024-04-21.md
+++ b/2024/2024-04-21.md
@@ -1,8 +1,20 @@
 # Two ways to *not* print money
 ## Bitcoin and USD both ended up with restrictive monetary policies last week -- each in its distinctive way.
 
+<!--
+
+Platform drafts...
+
+- MailChimp: https://us15.admin.mailchimp.com/email/editor?id=20349331
+
+- LinkedIn: https://www.linkedin.com/article/edit/7187869512904454144/?author=urn%3Ali%3Afsd_profile%3AACoAAAYIbNkBPBHpNq--pp945GKBQMoaBxEppjg
+
+- Medium: https://medium.com/p/eff9388b31fa/edit
+
+-->
+
 ![Fed Chair Jerome Powell](https://w3w.news/img/powell-1920.jpg)
-*For bitcoin, there is no equivalent of Jerome Powell. Photo courtesy of the Federal Reserve via Wikimedia Commons*
+*On the Bitcoin network, there is no equivalent of Jerome Powell. His job is automated. Photo courtesy of the Federal Reserve via Wikimedia Commons*
 
 <!--
 
@@ -16,26 +28,21 @@ https://www.reuters.com/markets/us/feds-powell-jefferson-square-restrictive-poli
 
 ### Week in Review: April 14-20, 2024
 
-- BTC update: Halving, market action, etc. <!-- Need links --> Dominance hit 55%, highest level since 2021, according to Bloomberg. <!-- Find link -->
-
-- https://www.citationneeded.news/ai-isnt-useless/
+- https://www.wired.com/story/the-us-copyright-office-loosens-up-a-little-on-ai/
 
 - https://www.coindesk.com/policy/2024/04/19/indian-man-pleads-guilty-to-creating-spoofed-coinbase-website-stealing-95m-in-crypto/
 
+- BTC dominance hit 55%, highest level since 2021, according to Bloomberg.
+
+- https://www.citationneeded.news/ai-isnt-useless/
+
 - Big Tech updates: Meta AI announcement | Google fired employees for Gaza protests. | Magnificent Seven all report quarterly earnings next week. https://seekingalpha.com/article/4684338-magnificent-7-earnings-preview-sa-quant | Apple ordered to remove WhatsApp from Chinese App Store. https://www.nytimes.com/2024/04/18/technology/apple-whatsapp-china-app-store.html
 
-- https://www.wired.com/story/the-us-copyright-office-loosens-up-a-little-on-ai/
-
+- **ICYMI:** The trading platform Robinhood just [launched](https://www.axios.com/2024/04/09/robinhood-launches-sherwood-media) a media site dubbed [Sherwood News](https://sherwood.news/), written and edited independently by a team of veteran journalists.
 
 ### Odds & Ends
 
-- New news site from Robin Hood: https://sherwood.news/
-
 - https://www.nytimes.com/2024/04/15/climate/coral-reefs-bleaching.html
-
-- https://www.coindesk.com/consensus-magazine/2024/04/16/what-the-history-of-linux-says-about-the-long-road-to-decentralized-storage-adoption/
-
-- https://twitter.com/BitcoinNewsCom/status/1780421942425575597
 
 - https://www.reuters.com/world/americas/police-arrest-six-seek-three-others-linked-canadas-largest-gold-heist-2024-04-17/
 
