Updates to news summary

--- a/2024/2024-04-21.md
+++ b/2024/2024-04-21.md
@@ -28,23 +28,25 @@ https://www.reuters.com/markets/us/feds-powell-jefferson-square-restrictive-poli
 
 ### Week in Review: April 14-20, 2024
 
-- https://www.wired.com/story/the-us-copyright-office-loosens-up-a-little-on-ai/
+- **Kraken has acquired TradeStation Crypto** to help the exchange expand its footprint in the U.S. ([CoinDesk](https://www.coindesk.com/business/2024/04/18/cryptocurrency-exchange-kraken-acquires-tradestation-crypto/))
 
-- https://www.coindesk.com/policy/2024/04/19/indian-man-pleads-guilty-to-creating-spoofed-coinbase-website-stealing-95m-in-crypto/
+- **Bitcoin dominance,** a measure of the token's share of the global crypto market, touched a [three-year high](https://www.reuters.com/world/americas/police-arrest-six-seek-three-others-linked-canadas-largest-gold-heist-2024-04-17/) above 56% ahead of the halving. It has since retreated somewhat, hovering below 54% in today's trading.
 
-- BTC dominance hit 55%, highest level since 2021, according to Bloomberg.
+- **An Indian citizen** pleaded guilty to U.S. charges of defrauding Coinbase users of $9.5 million via a website that spoofed the exchange. ([CoinDesk](https://www.coindesk.com/policy/2024/04/19/indian-man-pleads-guilty-to-creating-spoofed-coinbase-website-stealing-95m-in-crypto/))
 
-- https://www.citationneeded.news/ai-isnt-useless/
+- **The U.S. Copyright Office** granted author Elisa Shupe a copyright on a self-published novel written with significant help from ChatGPT, in a case that could set a precedent for other AI-assisted works. The copyright was granted, with some caveats that USCO doesn't apply to books written the traditional way, after Shupe appealed an initial rejection. ([Wired](https://www.wired.com/story/the-us-copyright-office-loosens-up-a-little-on-ai/))  
 
-- Big Tech updates: Meta AI announcement | Google fired employees for Gaza protests. | Magnificent Seven all report quarterly earnings next week. https://seekingalpha.com/article/4684338-magnificent-7-earnings-preview-sa-quant | Apple ordered to remove WhatsApp from Chinese App Store. https://www.nytimes.com/2024/04/18/technology/apple-whatsapp-china-app-store.html
+- **Apple says the Chinese government** ordered it to remove WhatsApp and Threads from its App Store in China due to unspecified national security concerns. Two other encrypted messaging apps, Signal and Telegram, also appear to have been taken down. ([Reuters](https://www.reuters.com/technology/apple-removes-whatsapp-threads-china-app-store-wsj-reports-2024-04-19/))
+
+- **Four of the U.S. tech behemoths** in the "Magnificent 7" are due to report quarterly earnings this week. Tesla's announcement is due Tuesday, Meta on Wedneday, and Microsoft and Alphabet on Thursday. ([MarketWatch](https://www.msn.com/en-us/money/companies/the-magnificent-seven-have-gotten-less-magnificent-ahead-of-earnings-this-one-could-have-the-most-explaining-to-do/ar-AA1noimL))
 
 - **ICYMI:** The trading platform Robinhood just [launched](https://www.axios.com/2024/04/09/robinhood-launches-sherwood-media) a media site dubbed [Sherwood News](https://sherwood.news/), written and edited independently by a team of veteran journalists.
 
 ### Odds & Ends
 
-- https://www.nytimes.com/2024/04/15/climate/coral-reefs-bleaching.html
+- **Police arrested six people** and are looking for three more in connection with the largest gold heist in Canadian history. ([Reuters](https://www.reuters.com/world/americas/police-arrest-six-seek-three-others-linked-canadas-largest-gold-heist-2024-04-17/))
 
-- https://www.reuters.com/world/americas/police-arrest-six-seek-three-others-linked-canadas-largest-gold-heist-2024-04-17/
+- **U.S. climate scientists announced** that the world’s coral reefs are undergoing a bleaching event caused by elevated ocean temperatures. Bleachings kill off symbiotic algae the corals need to survive. Yikes. ([New York Times](https://www.nytimes.com/2024/04/15/climate/coral-reefs-bleaching.html))
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please join our email list.**_
 
