--- a/2024/2024-04-21.md
+++ b/2024/2024-04-21.md
@@ -1,5 +1,5 @@
-# Two ways to *not* print money
-## Bitcoin and USD both ended up with restrictive monetary policies last week -- each in its distinctive way.
+# Two starkly different ways to fight inflation
+## Bitcoin and USD just succinctly illustrated their unique visions of monetary policy.
 
 <!--
 
@@ -18,7 +18,7 @@ Platform drafts...
 
 **What a study in contrasts.**
 
-A foul mood spread around Wall Street last week regarding when exactly the Federal Reserve will start printing cheap dollars again. The U.S. central bank's chairman, Jerome Powell, said it [may take longer](https://www.cnn.com/2024/04/16/business/chair-powell-discussion/index.html) than previously expected due to persistently strong readings of inflation.
+A foul mood spread around Wall Street last week regarding when exactly the Federal Reserve will start printing cheap dollars again. The U.S. central bank's chairman, Jerome Powell, said it [may take longer](https://www.cnn.com/2024/04/16/business/chair-powell-discussion/index.html) than previously expected due to [persistently strong readings](https://www.cnbc.com/2024/04/10/cpi-inflation-march-2024-consumer-prices-rose-3point5percent-from-a-year-ago-in-march.html) of inflation in America.
 
 Meanwhile, the Bitcoin network just slowed its money printer, predictably and transparently, right on schedule. No shock to it whatsoever.
 
@@ -26,15 +26,17 @@ I refer of course to Bitcoin's [latest halving](https://www.investopedia.com/bit
 
 For people speculating on bitcoin's token price, halvings tend to be welcome events. The additional constraint on supply has historically tended to boost bitcoin's market price across the three previous halvings in 2020, 2016, and 2012, according to [Reuters](https://www.reuters.com/markets/currencies/crypto-fans-count-down-bitcoins-halving-2024-04-19/).
 
-But this particluar halving was well-timed purely for educational purposes as well. For anyone who just wants to better understand what makes this "weird" new form of money different, and why it might be a necessary addition to global markets, the juxtaposition of this halving and the latest Fed drama within a few days of each other should be instructive.
+But Friday's halving was well-timed purely for educational purposes as well. For anyone who just wants to better understand what makes this "weird" new form of money different, and why it might be a necessary addition to global markets, the juxtaposition of this halving and the latest Fed drama within a few days of each other should be instructive.
 
-A quick multiple-choice exercise that underscores the point: If you had to manage a global currency in the twenty-first century, would it make more sense to...
+A quick multiple-choice exercise that underscores the point: If you had to manage a global currency in the twenty-first century, would it make more sense to:
 
-A. Automate the currency's issuance according to measurable milestones, based on publicly available data that's updated around the clock, seven days a week? Or...
+*A.* Automate the currency's issuance according to measurable milestones, based on publicly available data that's updated around the clock, seven days a week? Or...
 
-B. Rely on the whims of a [small committee](https://www.federalreserve.gov/monetarypolicy/fomc.htm) of human beings who [meet periodically](https://www.federalreserve.gov/monetarypolicy/fomccalendars.htm) in secret, try to correctly guess the exact timing when the immensely complex global economy warrants a change in monetary policy, and then emerge to announce their decisions publicly, like [oracles](https://historycooperative.org/the-oracle-of-delphi/) from ancient times?
+*B.* Rely on the whims of a [small committee](https://www.federalreserve.gov/monetarypolicy/fomc.htm) of human beings who [meet periodically](https://www.federalreserve.gov/monetarypolicy/fomccalendars.htm) in secret, try to correctly guess the exact timing when the immensely complex global economy warrants a change in monetary policy, and then emerge to announce their decisions publicly, like [oracles](https://historycooperative.org/the-oracle-of-delphi/) from ancient times?
 
 Extra credit question: Which of these options really seems "weirder" to you?
+
+On to the week's other notable headlines...
 
 ### Week in Review: April 14-20, 2024
 
