Early, early draft for 28 Apr

--- a/2024/2024-04-28.md
+++ b/2024/2024-04-28.md
@@ -1,12 +1,41 @@
-# tktktktktk
+# tktktk
 ## tktktktk
 
-![]()
-*Photo by tk via tk*
+![Zane Witherspoon and Denis Denis Molchanenko of Dispatch Labs](https://miro.medium.com/v2/resize:fit:1400/format:webp/1*ehPvBgHMiT5bgqffsDPgAw.jpeg)
+*Zane Witherspoon and Denis Denis Molchanenko of Dispatch Labs preparing for public launch of the company's blockchain "mainnet" on Dec. 3, 2018.*
 
-<!-- Lede item. Should run ~450 words.
+<!--
 
-Leaning toward a roundup of open social protocols. Some relevant links: 
+Lede item. Should run ~450 words. Lay out your theory of the 4-part crypto market and why it matters.
+
+- OPENSOCIAL: Roundup of open standards. Shout out Our biggest fight folks.
+- 4PART: The four-part market and why it matters.
+-
+
+Is this crypto stuff going to last?
+
+Short answer: Yes.
+
+Longer answer: The first three parts mentioned above will certainly last. Bitcoin and Ethereum have reached such a scale that they certainly are going to last. So will stablecoins as a category, although there may be winners and losers along the way. In other words, I can't necessarily tell you that the exact stablecoins that are widely used today will be the same ones in wide use 10 years from now. But there will certainly be *something* along those lines still in use.
+
+The fourth part -- "everything else" -- contains a mix of stuff that will last and stuff that won't.
+
+OK. But where do I even start?
+
+Read up on the first three categories, gain a thorough understanding, and invest where you believe there is the most value. As for the fourth category, you can safely ignore it as a newbie.
+
+
+
+
+
+
+
+
+
+
+
+
+Leaning toward a roundup of open social protocols. Some relevant links:
 
 ActivityPub https://en.wikipedia.org/wiki/ActivityPub
 
@@ -40,14 +69,63 @@ A few alternative and (mostly) evergreen possibilities below. Remember to clean 
 
 <!-- Prompt: Leo, please summarize the news article in this browser tab. I'm looking for a paragraph of 2-3 conversational sentences, suitable to use in a newsletter I'm working on. -->
 
-- tk
-- tk
-- tk
+- Bitcoin Runes are boosting network fees through the roof. <!-- Need link -->
+
+- NYSE considering 24-hour trading day. <!-- Need link. -->
+
+- New SBF settlement with investors. <!-- Need link -->
+
+- TikTok bill passed. https://twitter.com/jacobhelberg/status/1783159895069528260
+
+- CZ sentencing. <!-- New link -->
+
+- https://www.washingtonpost.com/opinions/2024/04/24/ignoble-house-republicans-against-ukraine-aid/
+
+<!-- Some leftovers. These are unlikely candidates, but just some articles worth reading... -->
+
+- https://www.citationneeded.news/ai-isnt-useless/
+
+https://financebuzz.com/supplement-income-yaez?adgroupid=45257510&adid=1743497623825240223
+
+https://www.coindesk.com/consensus-magazine/2024/04/16/what-the-history-of-linux-says-about-the-long-road-to-decentralized-storage-adoption/
+
+https://www.washingtonpost.com/business/2024/04/09/tax-day-deadline-extension-refund/
+
+https://www.wsj.com/world/india/american-investors-embrace-a-less-democratic-india-a8e60874
+
+https://www.wsj.com/articles/irs-tax-collectors-audit-middle-class-tigta-5071d622#cxrecs_s
+
+https://www.wsj.com/finance/commodities-futures/commodities-rally-reflects-a-better-economy-but-also-poses-inflation-risks-1e81e723
+
+https://www.wsj.com/health/wellness/dementia-prevention-middle-age-brain-14d713a3
+
+- https://www.washingtonpost.com/world/2024/04/05/haiti-gangs-american-guns/
+
+- https://slate.com/business/2024/03/supporting-parents-financially-generational-wealth.html
+
+- https://bettermarketing.pub/youre-wasting-your-time-posting-daily-on-linkedin-6c7b1337bcdf
+
+- https://stanfordbinettest.com/
+
+- https://www.vogue.com/article/joan-didion-self-respect-essay-1961
+
+- https://www.wsj.com/business/media/paramount-faces-a-mountain-of-distrust-16502584
+
+- https://slate.com/human-interest/2024/03/insomnia-cures-drug-free-sleeplessness-lewis-carroll-book.html
+
+- https://www.nasdaq.com/articles/why-blockchain-technology-is-the-future-of-supply-chain-and-vendor-management
+
+- https://www.wsj.com/tech/personal-tech/schools-want-to-ban-phones-parents-say-no-62889fe0?reflink=desktopwebshare_permalink
 
 ### Odds & Ends
 
-- tk
-- tk
+- https://www.wsj.com/lifestyle/careers/business-tripping-the-professionals-trying-drugs-to-get-better-at-work-c0ff5ad4?reflink=desktopwebshare_permalink
+
+- Dropping iPhones.
+
+- Voyager 1 phoned home. <!--- Need link -->
+
+- https://slate.com/technology/2024/04/anthropocene-plastic-rocks-pollution-geology.html
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please join our email list.**_
 
