--- a/2024/2024-04-28.md
+++ b/2024/2024-04-28.md
@@ -1,73 +1,22 @@
-# tktktk
-## tktktktk
+# Fixing social's mendacious f#!ks problem
+## Under the new TikTok bill, misrule among the major platforms may get worse before it gets better. But there is hope.
 
-![Zane Witherspoon and Denis Denis Molchanenko of Dispatch Labs](https://miro.medium.com/v2/resize:fit:1400/format:webp/1*ehPvBgHMiT5bgqffsDPgAw.jpeg)
-*Zane Witherspoon and Denis Denis Molchanenko of Dispatch Labs preparing for public launch of the company's blockchain "mainnet" on Dec. 3, 2018.*
+![]()
+*Photo by tk via tk*
 
 <!--
 
-Lede item. Should run ~450 words. Lay out your theory of the 4-part crypto market and why it matters.
+Lede item. Should run ~450 words.
 
-- OPENSOCIAL: Roundup of open standards. Shout out Our biggest fight folks.
-- 4PART: The four-part market and why it matters.
--
+- Riff on social networking. TikTok bill will likely empower Meta.
 
-Is this crypto stuff going to last?
+- Mendacious f*&ks: galloway.
 
-Short answer: Yes.
-
-Longer answer: The first three parts mentioned above will certainly last. Bitcoin and Ethereum have reached such a scale that they certainly are going to last. So will stablecoins as a category, although there may be winners and losers along the way. In other words, I can't necessarily tell you that the exact stablecoins that are widely used today will be the same ones in wide use 10 years from now. But there will certainly be *something* along those lines still in use.
-
-The fourth part -- "everything else" -- contains a mix of stuff that will last and stuff that won't.
-
-OK. But where do I even start?
-
-Read up on the first three categories, gain a thorough understanding, and invest where you believe there is the most value. As for the fourth category, you can safely ignore it as a newbie.
-
-
-
-
-
-
-
-
-
-
-
-
-Leaning toward a roundup of open social protocols. Some relevant links:
-
-ActivityPub https://en.wikipedia.org/wiki/ActivityPub
-
-https://uk.finance.yahoo.com/news/billionaire-frank-mccourt-got-divorced-100000144.html
-
-https://www.aol.com/finance/big-tech-doesnt-billionaire-frank-110418265.html
-
-https://dsnp.org/
-
-https://github.com/LibertyDSNP
-
-https://vimeo.com/showcase/dsnp-public-spec-meeting
-
-https://nostr.com/
-
-https://mirror.xyz/about
-
-
-
-A few alternative and (mostly) evergreen possibilities below. Remember to clean up WIPlist in Notion, store ideas here for the newsletter as you go...
-
-- MLBAI: Yes, MLB could provide examples of AI's applications -- and how they might affect other sorts of workplaces. But MLB is also already providing great examples of how data can be abused. Why is OBP down? Why are pitchers' arms falling apart? How do you judge relevance of a particular piece of data to the mission of an organization and the day-to-day execution of it? Riff on WaPo article at https://www.washingtonpost.com/opinions/2024/04/10/op-moneyballai/
-
-- AISIGNIN: One of the most boring aspects of this new technology is really one of the most important.
-
-- HOMEBIAS: Does it exist in tech, as in the stock market?
+- Open protocols
 
 -->
 
-### Week in Review: April 14-20, 2024
-
-<!-- Prompt: Leo, please summarize the news article in this browser tab. I'm looking for a paragraph of 2-3 conversational sentences, suitable to use in a newsletter I'm working on. -->
+### Week in Review: April 21-27, 2024
 
 - Bitcoin Runes are boosting network fees through the roof. <!-- Need link -->
 
@@ -120,8 +69,6 @@ https://www.wsj.com/health/wellness/dementia-prevention-middle-age-brain-14d713a
 ### Odds & Ends
 
 - https://www.wsj.com/lifestyle/careers/business-tripping-the-professionals-trying-drugs-to-get-better-at-work-c0ff5ad4?reflink=desktopwebshare_permalink
-
-- Dropping iPhones.
 
 - Voyager 1 phoned home. <!--- Need link -->
 
