Edits to news summary items.

--- a/2024/2024-04-28.md
+++ b/2024/2024-04-28.md
@@ -1,78 +1,41 @@
-# Fixing social's mendacious f#!ks problem
-## Under the new TikTok bill, misrule among the major platforms may get worse before it gets better. But there is hope.
-
-![]()
-*Photo by tk via tk*
+# The big winner from a TikTok ban in America
+## Hint: It's a certain other social company you probably don't like.
+![Mark Zuckerberg](https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Mark_Zuckerberg_F8_2018_Keynote.jpg/2560px-Mark_Zuckerberg_F8_2018_Keynote.jpg)
+*Meta founder Mark Zuckerberg speaking at a 2018 developers' conference. Photo by Anthony Quintano via Wikimedia Commons*
 
 <!--
 
-Lede item. Should run ~450 words.
+Lede item. Should run ~450 words. Riff on social networking. TikTok bill will likely empower Meta. Segue to topic of open social protocols.
 
-- Riff on social networking. TikTok bill will likely empower Meta.
+Some notable links:
 
-- Mendacious f*&ks: galloway.
+- TikTok bill passed. https://twitter.com/jacobhelberg/status/1783159895069528260
 
-- Open protocols
+- Galloway post calling Meta management "mendacious fucks": https://www.profgalloway.com/the-netflix-effect/
 
 -->
 
 ### Week in Review: April 21-27, 2024
 
-- Bitcoin Runes are boosting network fees through the roof. <!-- Need link -->
+- **Ethereum goes on the offensive:** The Ethereum-focused venture firm Consenys [filed a lawsuit](https://www.reuters.com/legal/crypto-firm-consensys-sues-us-sec-over-ethereum-regulation-2024-04-25/) against the Securities and Exchange Commission, alleging it has overstepped its jurisdiction in attempting to regulate the ether token. Separately, Vitalik Buterin [pushed back](https://www.theblock.co/post/291214/vitalik-buterin-says-that-ethereums-pow-was-quite-centralized-and-a-temporary-stage-until-pos) against user criticism that Ethereum should have kept its proof-of-work mechanism for verifying transactions.
 
-- NYSE considering 24-hour trading day. <!-- Need link. -->
+- **The recently launched Runes protocol,** which enables minting of memecoins on the Bitcoin network, generated $135 million in transaction fees in its first week. Analysts say it's also contributing heavily to a spike in fees for all users of the network. ([The Block](https://www.theblock.co/post/291132/runes-generate-over-135-million-in-fees-in-first-week-on-bitcoin-network))
 
-- New SBF settlement with investors. <!-- Need link -->
+- **Stripe announced** it will resume support for crypto payments for the first time since 2018. Stripe will handle transactions only in USDC for now. ([TechCrunch](https://techcrunch.com/2024/04/25/after-6-year-hiatus-stripe-to-start-taking-crypto-payments-starting-with-usdc-stablecoin/))
 
-- TikTok bill passed. https://twitter.com/jacobhelberg/status/1783159895069528260
+- **Yuga Labs,** maker of the Bored Apes Yacht Club collection of non-fungible tokens, announced a corporate restructuring and employee layoffs. ([The Block](https://www.theblock.co/post/291224/yuga-labs-restructures-company-cuts-roles-to-focus-on-smaller-crypto-native-team))
 
-- CZ sentencing. <!-- New link -->
+- **U.S. prosecutors are seeking*** a three-year prison sentence for Binance founder Changpeng Zhao for violations of America's Bank Secrecy Act. A judge will rule on the matter Tuesday. ([International Business Times](https://www.ibtimes.com/lawyers-binances-cz-decry-us-prosecutors-proposed-3-year-sentence-3730530))
 
-- https://www.washingtonpost.com/opinions/2024/04/24/ignoble-house-republicans-against-ukraine-aid/
+- **FTX founder Sam Bankman-Fried** reached a civil settlement with a group of the exchange's customers who had filed a class-action lawsuit against him. In exchange for them dropping the suit, Bankman-Fried will help them pursue damages from celebrities who helped promote FTX. ([CoinDesk](https://www.msn.com/en-us/money/companies/sam-bankman-fried-agrees-to-help-ftx-investors-go-after-celeb-promoters/ar-AA1nsLzG))
 
-<!-- Some leftovers. These are unlikely candidates, but just some articles worth reading... -->
-
-- https://www.citationneeded.news/ai-isnt-useless/
-
-https://financebuzz.com/supplement-income-yaez?adgroupid=45257510&adid=1743497623825240223
-
-https://www.coindesk.com/consensus-magazine/2024/04/16/what-the-history-of-linux-says-about-the-long-road-to-decentralized-storage-adoption/
-
-https://www.washingtonpost.com/business/2024/04/09/tax-day-deadline-extension-refund/
-
-https://www.wsj.com/world/india/american-investors-embrace-a-less-democratic-india-a8e60874
-
-https://www.wsj.com/articles/irs-tax-collectors-audit-middle-class-tigta-5071d622#cxrecs_s
-
-https://www.wsj.com/finance/commodities-futures/commodities-rally-reflects-a-better-economy-but-also-poses-inflation-risks-1e81e723
-
-https://www.wsj.com/health/wellness/dementia-prevention-middle-age-brain-14d713a3
-
-- https://www.washingtonpost.com/world/2024/04/05/haiti-gangs-american-guns/
-
-- https://slate.com/business/2024/03/supporting-parents-financially-generational-wealth.html
-
-- https://bettermarketing.pub/youre-wasting-your-time-posting-daily-on-linkedin-6c7b1337bcdf
-
-- https://stanfordbinettest.com/
-
-- https://www.vogue.com/article/joan-didion-self-respect-essay-1961
-
-- https://www.wsj.com/business/media/paramount-faces-a-mountain-of-distrust-16502584
-
-- https://slate.com/human-interest/2024/03/insomnia-cures-drug-free-sleeplessness-lewis-carroll-book.html
-
-- https://www.nasdaq.com/articles/why-blockchain-technology-is-the-future-of-supply-chain-and-vendor-management
-
-- https://www.wsj.com/tech/personal-tech/schools-want-to-ban-phones-parents-say-no-62889fe0?reflink=desktopwebshare_permalink
+- **Parents are often the biggest obstacle** when U.S. school administrators try to limit students' mobile phone use to promote learning. ([Wall Street Journal](https://www.wsj.com/tech/personal-tech/schools-want-to-ban-phones-parents-say-no-62889fe0?reflink=desktopwebshare_permalink))  
 
 ### Odds & Ends
 
-- https://www.wsj.com/lifestyle/careers/business-tripping-the-professionals-trying-drugs-to-get-better-at-work-c0ff5ad4?reflink=desktopwebshare_permalink
+- **Plastistone, anyone?** Geologists are debating whether objects formed when discarded plastic scraps combine with sand and other elements in nature constitute a whole new category of rocks. Such "stones" are increasingly washing up on beaches as there's so much plastic in our oceans. Sigh. ([Slate](https://slate.com/technology/2024/04/anthropocene-plastic-rocks-pollution-geology.html))
 
-- Voyager 1 phoned home. <!--- Need link -->
-
-- https://slate.com/technology/2024/04/anthropocene-plastic-rocks-pollution-geology.html
+- **Catholic Answers,** a San Diego-based publisher of religious information, downgraded an AI chatbot it had trained as a "virtual priest" after it suggested baptizing people in Gatorade. The bot had originally been dubbed "Father Justin" but will now be known to users by the simplified (and less clerical) monicker "Justin." ([Decrypt](https://decrypt.co/228360/ai-priest-catholic-answers-father-justin))
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please join our email list.**_
 
