--- a/2024/2024-05-04.md
+++ b/2024/2024-05-04.md
@@ -115,13 +115,15 @@ https://www.wsj.com/health/wellness/dementia-prevention-middle-age-brain-14d713a
 
 - https://www.nasdaq.com/articles/why-blockchain-technology-is-the-future-of-supply-chain-and-vendor-management
 
+- NYT on inflation: https://www.nytimes.com/2024/04/26/business/inflation-money-dollar-value.html | https://www.nytimes.com/2024/04/25/opinion/us-federal-debt.html | https://www.wsj.com/economy/central-banking/trump-allies-federal-reserve-independence-54423c2f?reflink=desktopwebshare_permalinks
+
 - https://www.wsj.com/tech/personal-tech/schools-want-to-ban-phones-parents-say-no-62889fe0?reflink=desktopwebshare_permalink
 
 ### Odds & Ends
 
-- TK 
+- https://www.washingtonpost.com/home/2024/04/26/advice-squirrels-stop-chewing-furniture/
 
-- Dropping iPhones.
+- **Why can an iPhone survive a drop** from a plane but not from your kitchen counter? Though some creative use of drones, the Wall Street Journal [investigates](https://www.wsj.com/tech/personal-tech/why-an-iphone-can-survive-a-drop-from-a-plane-but-not-from-your-kitchen-counter-57453ca9?reflink=desktopwebshare_permalink).
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please join our email list.**_
 
