--- a/2024/2024-04-28.md
+++ b/2024/2024-04-28.md
@@ -1,21 +1,6 @@
-# The big winner from a TikTok ban in America
-## Hint: It's a certain other social company you probably don't like.
-![Mark Zuckerberg](https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Mark_Zuckerberg_F8_2018_Keynote.jpg/2560px-Mark_Zuckerberg_F8_2018_Keynote.jpg)
-*Meta founder Mark Zuckerberg speaking at a 2018 developers' conference. Photo by Anthony Quintano via Wikimedia Commons*
+# April 21-27, 2024
 
-<!--
-
-Lede item. Should run ~450 words. Riff on social networking. TikTok bill will likely empower Meta. Segue to topic of open social protocols.
-
-Some notable links:
-
-- TikTok bill passed. https://twitter.com/jacobhelberg/status/1783159895069528260
-
-- Galloway post calling Meta management "mendacious fucks": https://www.profgalloway.com/the-netflix-effect/
-
--->
-
-### Week in Review: April 21-27, 2024
+- **President Biden signed into law** a bill requiring China's ByteDance to sell TikTok within nine months or else be banned for U.S. users. ([CNN](https://www.cnn.com/2024/04/23/tech/congress-tiktok-ban-what-next/index.html))
 
 - **Ethereum goes on the offensive:** The Ethereum-focused venture firm Consenys [filed a lawsuit](https://www.reuters.com/legal/crypto-firm-consensys-sues-us-sec-over-ethereum-regulation-2024-04-25/) against the Securities and Exchange Commission, alleging it has overstepped its jurisdiction in attempting to regulate the ether token. Separately, Vitalik Buterin [pushed back](https://www.theblock.co/post/291214/vitalik-buterin-says-that-ethereums-pow-was-quite-centralized-and-a-temporary-stage-until-pos) against user criticism that Ethereum should have kept its proof-of-work mechanism for verifying transactions.
 
