--- a/2024/2024-05-04.md
+++ b/2024/2024-05-04.md
@@ -1,3 +1,21 @@
+# The big winner from a TikTok ban in America
+## Hint: It will probably be a certain other social company you don't like.
+![Mark Zuckerberg](https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Mark_Zuckerberg_F8_2018_Keynote.jpg/2560px-Mark_Zuckerberg_F8_2018_Keynote.jpg)
+*Meta founder Mark Zuckerberg speaking at a 2018 developers' conference. Photo by Anthony Quintano via Wikimedia Commons*
+
+<!--
+
+Lede item. Should run ~450 words. Riff on social networking. TikTok bill will likely empower Meta. Segue to topic of open social protocols.
+
+Some notable links:
+
+- TikTok bill passed. https://twitter.com/jacobhelberg/status/1783159895069528260
+
+- Galloway post calling Meta management "mendacious fucks": https://www.profgalloway.com/the-netflix-effect/
+
+-->
+
+
 # tktktk
 ## tktktktk
 
